--- a/app/src/main/res/layout/dialog_save_event.xml
+++ b/app/src/main/res/layout/dialog_save_event.xml
@@ -1,109 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
-                name="eventViewModel"
-                type="be.hogent.faith.faith.enterEventDetails.EventDetailsViewModel"/>
+            name="eventViewModel"
+            type="be.hogent.faith.faith.enterEventDetails.EventDetailsViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:minWidth="400dp"
+        android:minHeight="400dp">
 
         <TextView
-                android:text="@string/lbl_save_event_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/lbl_save_event_title"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/txt_save_event_title"/>
+            android:id="@+id/lbl_save_event_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@string/lbl_save_event_title"
+            app:layout_constraintBaseline_toBaselineOf="@+id/txt_save_event_title"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/lbl_save_event_date"
-                android:text="@string/lbl_save_event_date"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/btn_save_event_open_datepicker"/>
+            android:id="@+id/lbl_save_event_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@string/lbl_save_event_date"
+            app:layout_constraintBaseline_toBaselineOf="@+id/btn_save_event_open_datepicker"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/lbl_save_event_notes"
-                android:text="@string/lbl_save_event_notes"
-                app:layout_constraintTop_toTopOf="@+id/txt_save_event_notes"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"/>
+            android:id="@+id/lbl_save_event_notes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@string/lbl_save_event_notes"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/txt_save_event_notes" />
 
         <EditText
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:id="@+id/txt_save_event_notes"
-                tools:text="@tools:sample/lorem"
-                app:layout_constraintStart_toStartOf="@+id/guide_save_event"
-                android:text="@={eventViewModel.eventNotes}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/btn_save_event_save"
-                android:layout_margin="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/btn_save_event_open_datepicker"/>
+            android:id="@+id/txt_save_event_notes"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@={eventViewModel.eventNotes}"
+            app:layout_constraintBottom_toTopOf="@+id/btn_save_event_save"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guide_save_event"
+            app:layout_constraintTop_toBottomOf="@+id/btn_save_event_open_datepicker"
+            tools:text="@tools:sample/lorem/random" />
 
         <EditText
-                tools:text="Titel van event"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/txt_save_event_title"
-                android:text="@={eventViewModel.eventTitle}"
-                app:layout_constraintStart_toStartOf="@+id/guide_save_event"
-                android:layout_margin="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
+            android:id="@+id/txt_save_event_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@={eventViewModel.eventTitle}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guide_save_event"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Titel van event" />
 
         <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_save_event_open_datepicker"
-                android:onClick="@{() -> eventViewModel.onDateButtonClicked()}"
-                tools:text="@tools:sample/date/ddmmyy"
-                android:layout_margin="16dp"
-                app:layout_constraintStart_toStartOf="@+id/guide_save_event"
-                app:layout_constraintTop_toBottomOf="@+id/txt_save_event_title"/>
+            android:id="@+id/btn_save_event_open_datepicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:onClick="@{() -> eventViewModel.onDateButtonClicked()}"
+            android:text="@{eventViewModel.eventDateString}"
+            app:layout_constraintBottom_toTopOf="@+id/txt_save_event_notes"
+            app:layout_constraintStart_toStartOf="@+id/guide_save_event"
+            app:layout_constraintTop_toBottomOf="@+id/txt_save_event_title"
+            tools:text="@tools:sample/date/ddmmyy" />
 
         <androidx.constraintlayout.widget.Guideline
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/guide_save_event"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.2"/>
+            android:id="@+id/guide_save_event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.2" />
 
         <Button
-                android:text="@string/save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_save_event_save"
-                android:onClick="@{() -> eventViewModel.onSaveButtonClicked()}"
-                android:layout_margin="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+            android:id="@+id/btn_save_event_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:onClick="@{() -> eventViewModel.onSaveButtonClicked()}"
+            android:text="@string/save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-                android:text="@string/lbl_back"
-                android:layout_width="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_save_event_cancel"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="8dp"
-                android:onClick="@{() -> eventViewModel.onCancelButtonClicked()}"
-                app:layout_constraintTop_toTopOf="@+id/btn_save_event_save"/>
+            android:id="@+id/btn_save_event_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:onClick="@{() -> eventViewModel.onCancelButtonClicked()}"
+            android:text="@string/lbl_back"
+            app:layout_constraintBaseline_toBaselineOf="@+id/btn_save_event_save"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
