fix: fix remaining errors after new feature

--- a/app/src/main/res/layout/dialog_save_event.xml
+++ b/app/src/main/res/layout/dialog_save_event.xml
@@ -49,7 +49,7 @@
             android:layout_margin="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="@={eventViewModel.eventNotes}"
+            android:inputType="" android:text="@={eventViewModel.eventNotes}"
             app:layout_constraintBottom_toTopOf="@+id/btn_save_event_save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guide_save_event"
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:layout_marginEnd="8dp"
-            android:text="@={eventViewModel.eventTitle}"
+            android:inputType="" android:text="@={eventViewModel.eventTitle}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guide_save_event"
             app:layout_constraintTop_toTopOf="parent"
