--- a/app/src/main/res/layout-sw600dp-land/fragment_avatar.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_avatar.xml
@@ -1,77 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
-                name="avatarViewModel"
-                type="be.hogent.faith.faith.chooseAvatar.fragments.AvatarViewModel"/>
+            name="avatarViewModel"
+            type="be.hogent.faith.faith.chooseAvatar.fragments.AvatarViewModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <TextView
-                android:text="@string/frag_avatar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/avatar_tv_title"
-                style="@style/Base.TextAppearance.AppCompat.Title"
-                android:layout_margin="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/avatar_tv_title"
+            style="@style/Base.TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/frag_avatar_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
-                android:text="@string/frag_avatar_lbl_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/avatar_tv_name"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/avatar_tv_pick_avatar"
-                app:layout_constraintTop_toBottomOf="@+id/avatar_tv_title"
-                android:layout_margin="8dp"
-                />
+            android:id="@+id/avatar_tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/frag_avatar_lbl_name"
+            app:layout_constraintBottom_toTopOf="@+id/avatar_tv_pick_avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_tv_title" />
+
         <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/naam_hint"
-                android:inputType="textPersonName"
-                android:text="@={avatarViewModel.userName}"
-                android:id="@+id/avatar_txt_name"
-                app:layout_constraintBaseline_toBaselineOf="@id/avatar_tv_name"
-                tools:text="@tools:sample/full_names"
-                android:layout_margin="8dp"
-                app:layout_constraintStart_toEndOf="@+id/avatar_tv_name"
-                android:autofillHints="username"/>
+            android:id="@+id/avatar_txt_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:autofillHints="username"
+            android:hint="@string/naam_hint"
+            android:inputType="textPersonName"
+            android:text="@={avatarViewModel.userName}"
+            app:layout_constraintBaseline_toBaselineOf="@id/avatar_tv_name"
+            app:layout_constraintStart_toEndOf="@+id/avatar_tv_name"
+            tools:text="@tools:sample/full_names" />
+
         <TextView
-                android:text="@string/frag_avatar_pick_avatar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/avatar_tv_pick_avatar"
-                style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
-                android:layout_margin="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/avatar_tv_name"/>
+            android:id="@+id/avatar_tv_pick_avatar"
+            style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/frag_avatar_pick_avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_tv_name" />
+
         <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/avatar_rv_avatar"
-                tools:listitem="@layout/avatar_rv_item"
-                android:layout_weight="1"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_margin="8dp"
-                android:orientation="horizontal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/avatar_tv_pick_avatar">
-        </androidx.recyclerview.widget.RecyclerView>
+            android:id="@+id/avatar_rv_avatar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_tv_pick_avatar"
+            tools:listitem="@layout/avatar_rv_item"/>
+
         <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/frag_avatar_lbl_to_town"
-                android:onClick="@{() -> avatarViewModel.nextButtonPressed()}"
-                android:id="@+id/avatar_btn_go_to_town"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_margin="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/avatar_btn_go_to_town"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:onClick="@{() -> avatarViewModel.nextButtonPressed()}"
+            android:text="@string/frag_avatar_lbl_to_town"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
