test: redo all tests without FragmentScenario

--- a/app/src/main/res/layout/dialog_save_event.xml
+++ b/app/src/main/res/layout/dialog_save_event.xml
@@ -10,6 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/screen_save_event"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:minWidth="400dp"
@@ -49,7 +50,8 @@
             android:layout_margin="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:inputType="" android:text="@={eventViewModel.eventNotes}"
+            android:inputType=""
+            android:text="@={eventViewModel.eventNotes}"
             app:layout_constraintBottom_toTopOf="@+id/btn_save_event_save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guide_save_event"
@@ -62,7 +64,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:layout_marginEnd="8dp"
-            android:inputType="" android:text="@={eventViewModel.eventTitle}"
+            android:inputType=""
+            android:text="@={eventViewModel.eventTitle}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guide_save_event"
             app:layout_constraintTop_toTopOf="parent"
