feat: add side bar with dragable imgs

--- a/app/src/main/res/layout/fragment_draw_avatar.xml
+++ b/app/src/main/res/layout/fragment_draw_avatar.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="drawViewModel"
-            type="be.hogent.faith.faith.drawEmotionAvatar.DrawViewModel" />
+            type="be.hogent.faith.faith.makeDrawing.DrawViewModel" />
 
     </data>
 
