--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -7,37 +7,29 @@
 
         <variable
             name="drawViewModel"
-            type="be.hogent.faith.faith.drawEmotionAvatar.DrawViewModel" />
+            type="be.hogent.faith.faith.makeDrawing.DrawViewModel" />
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <include
             android:id="@+id/container_draw_utilities"
             layout="@layout/panel_drawing_tools"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             bind:drawViewModel="@{drawViewModel}" />
-
-        <include
-            android:id="@+id/container_draw_images"
-            layout="@layout/panel_drawing_images"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <com.divyanshu.draw.widget.DrawView
             android:id="@+id/draw_canvas"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/container_draw_utilities"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_weight="1"
+            android:layout_height="match_parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            android:id="@+id/container_draw_images"
+            layout="@layout/panel_drawing_images"/>
+
+    </LinearLayout>
 </layout>
