--- a/app/src/main/res/xml/editdetail_slide_avatar.xml
+++ b/app/src/main/res/xml/editdetail_slide_avatar.xml
@@ -7,17 +7,32 @@
             app:constraintSetEnd="@id/end"
             app:duration="1000">
         <OnSwipe
-                app:touchAnchorId="@+id/fragment_avatar_editdetail"
+                app:touchAnchorId="@+id/tv_editdetail_slideToEmotionAvatar"
                 app:touchAnchorSide="left"
                 app:dragDirection="dragLeft"
                 />
     </Transition>
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+                android:id="@id/tv_editdetail_slideToEmotionAvatar">
+            <CustomAttribute
+                    app:attributeName="Crossfade"
+                    app:customFloatValue="0"/>
+        </Constraint>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-                android:id="@id/fragment_avatar_editdetail"
+                android:id="@id/tv_editdetail_slideToEmotionAvatar"
+                app:layout_constraintStart_toStartOf="@id/gl_editDetail_vertical"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+            <CustomAttribute
+                    app:attributeName="Crossfade"
+                    app:customFloatValue="1"/>
+        </Constraint>
+        <Constraint
+                android:id="@id/image_editdetail_avatar"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintStart_toEndOf="@id/gl_editDetail_vertical"
