--- a/app/src/main/res/layout/fragment_draw_avatar.xml
+++ b/app/src/main/res/layout/fragment_draw_avatar.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="drawViewModel"
-            type="be.hogent.faith.faith.makeDrawing.DrawViewModel" />
+            type="be.hogent.faith.faith.drawing.DrawViewModel" />
 
     </data>
 
@@ -24,7 +24,7 @@
             bind:drawViewModel="@{drawViewModel}" />
 
         <com.divyanshu.draw.widget.DrawView
-            android:id="@+id/draw_canvas"
+            android:id="@+id/drawView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
