feat: move all fragments/vm to emotionCapture folder

--- a/app/src/main/res/layout/dialog_save_photo.xml
+++ b/app/src/main/res/layout/dialog_save_photo.xml
@@ -5,7 +5,7 @@
 
         <variable
                 name="takePhotoViewModel"
-                type="be.hogent.faith.faith.takePhoto.TakePhotoViewModel"/>
+                type="be.hogent.faith.faith.emotionCapture.takePhoto.TakePhotoViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
