--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -8,9 +8,9 @@
 
         <variable
                 name="recordAudioViewModel"
-                type="be.hogent.faith.faith.recordAudio.RecordAudioViewModel"/>
+                type="be.hogent.faith.faith.emotionCapture.recordAudio.RecordAudioViewModel"/>
 
-        <import type="be.hogent.faith.faith.recordAudio.RecordAudioViewModel.RecordingStatus"/>
+        <import type="be.hogent.faith.faith.emotionCapture.recordAudio.RecordAudioViewModel.RecordingStatus"/>
 
         <import type="android.view.View"/>
     </data>
