--- a/app/src/main/res/layout/dialog_save_audio_recording.xml
+++ b/app/src/main/res/layout/dialog_save_audio_recording.xml
@@ -5,7 +5,7 @@
 
         <variable
                 name="recordAudioViewModel"
-                type="be.hogent.faith.faith.recordAudio.RecordAudioViewModel"/>
+                type="be.hogent.faith.faith.emotionCapture.recordAudio.RecordAudioViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
