--- a/app/src/main/res/layout/fragment_avatar.xml
+++ b/app/src/main/res/layout/fragment_avatar.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="avatarViewModel"
-            type="be.hogent.faith.faith.chooseAvatar.fragments.AvatarViewModel" />
+            type="be.hogent.faith.faith.registerAvatar.AvatarViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
