--- a/app/src/main/res/layout/fragment_avatar.xml
+++ b/app/src/main/res/layout/fragment_avatar.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/avatar_txt_name"
+            android:id="@+id/txt_avatar_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -53,7 +53,7 @@
             android:layout_weight="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/avatar_txt_name"
+            app:layout_constraintTop_toBottomOf="@+id/txt_avatar_name"
             tools:listitem="@layout/avatar_rv_item">
 
         </androidx.recyclerview.widget.RecyclerView>
