--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -11,6 +11,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/screen_draw"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
