--- a/app/src/main/res/layout/fragment_edit_detail.xml
+++ b/app/src/main/res/layout/fragment_edit_detail.xml
@@ -4,70 +4,67 @@
     <data>
 
         <variable
-                name="editdetailViewModel"
-                type="be.hogent.faith.faith.emotionCapture.editDetail.EditDetailViewModel"/>
+            name="editdetailViewModel"
+            type="be.hogent.faith.faith.emotionCapture.editDetail.EditDetailViewModel" />
     </data>
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/motionLayout"
-            app:layoutDescription="@xml/editdetail_slide_avatar">
+    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/motionLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/editdetail_slide_avatar">
 
         <FrameLayout
-                android:id="@+id/fragment_container_editdetail"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/image_editdetail_avatar"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/fragment_container_editDetail"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/image_editDetail_avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:id="@+id/image_editdetail_avatar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/avatar"
-                android:scaleType="centerCrop"/>
+            android:id="@+id/image_editDetail_avatar"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/avatar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
-                android:background="@color/colorAccent"
-                android:src="@drawable/ic_baseline_chevron_left_24px"
-                app:altSrc="@drawable/ic_baseline_chevron_right_24px"
-                android:layout_width="50px"
-                android:layout_height="50px"
-                android:id="@+id/tv_editdetail_slideToEmotionAvatar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+            android:id="@+id/tv_editdetail_slideToEmotionAvatar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/colorAccent"
+            android:src="@drawable/ic_baseline_chevron_left_24px"
+            app:altSrc="@drawable/ic_baseline_chevron_right_24px"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/gl_editDetail_vertical"
-                app:layout_constraintGuide_percent="0.7"
-                android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/gl_editDetail_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintGuide_percent="0.7"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-                android:layout_height="70px"
-                android:layout_width="70px"
-                android:src="@drawable/ic_baseline_edit_24px"
-                android:id="@+id/btn_editdetail_gotoEditEmotionAvatar"
-                android:onClick="@{() -> editdetailViewModel.onGoToEmotionAvatarButtonClicked()}"
-                app:layout_constraintStart_toStartOf="@id/image_editdetail_avatar"
-                app:layout_constraintBottom_toBottomOf="@id/image_editdetail_avatar"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="8dp"
-                android:elevation="2dp"
-                />
+            android:id="@+id/btn_editDetail_gotoEditEmotionAvatar"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:elevation="2dp"
+            android:onClick="@{() -> editdetailViewModel.onGoToEmotionAvatarButtonClicked()}"
+            android:src="@drawable/ic_baseline_edit_24px"
+            app:layout_constraintBottom_toBottomOf="@id/image_editDetail_avatar"
+            app:layout_constraintStart_toStartOf="@id/image_editDetail_avatar" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
